--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/editTextAppId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:ems="10"
+        android:hint="@string/app_id"
+        android:importantForAutofill="no"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
+    <EditText
+        android:id="@+id/editTextTextUserId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="@string/user_id"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@+id/editTextAppId"
+        app:layout_constraintStart_toStartOf="@+id/editTextAppId"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAppId" />
+
+    <EditText
+        android:id="@+id/editTextTextSecurityToken"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="@string/security_token"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextUserId"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextUserId"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserId" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/show_offers"
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextSecurityToken"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextSecurityToken"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextSecurityToken" />
 </androidx.constraintlayout.widget.ConstraintLayout>
