--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,12 @@
         android:hint="@string/app_id"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:text="@string/test_app_id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <EditText
         android:id="@+id/editTextTextUserId"
@@ -29,6 +30,7 @@
         android:hint="@string/user_id"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:text="@string/test_user_id"
         app:layout_constraintEnd_toEndOf="@+id/editTextAppId"
         app:layout_constraintStart_toStartOf="@+id/editTextAppId"
         app:layout_constraintTop_toBottomOf="@+id/editTextAppId" />
@@ -41,7 +43,8 @@
         android:ems="10"
         android:hint="@string/security_token"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="textMultiLine|text"
+        android:text="@string/test_security_token"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextUserId"
         app:layout_constraintStart_toStartOf="@+id/editTextTextUserId"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextUserId" />
