--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,10 +50,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextUserId" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonShowOffers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:onClick="sendRequest"
         android:text="@string/show_offers"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextSecurityToken"
         app:layout_constraintStart_toStartOf="@+id/editTextTextSecurityToken"
