--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,4 +59,15 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextTextSecurityToken"
         app:layout_constraintStart_toStartOf="@+id/editTextTextSecurityToken"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextSecurityToken" />
+
+    <ProgressBar
+        android:id="@+id/progressBarShowOffers"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/buttonShowOffers"
+        app:layout_constraintStart_toStartOf="@+id/buttonShowOffers"
+        app:layout_constraintTop_toBottomOf="@+id/buttonShowOffers" />
 </androidx.constraintlayout.widget.ConstraintLayout>
