--- a/app/src/main/res/layout/activity_offer_list.xml
+++ b/app/src/main/res/layout/activity_offer_list.xml
@@ -7,9 +7,11 @@
     tools:context=".OfferListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/recyclerViewOffers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/item_offer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
