--- a/app/src/main/res/layout/item_offer.xml
+++ b/app/src/main/res/layout/item_offer.xml
@@ -24,6 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:maxEms="15"
+        android:maxLines="1"
         android:text="@string/offer_title"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewThumbnail"
         app:layout_constraintStart_toEndOf="@+id/imageViewThumbnail"
