Decouple API calls

--- a/fyberchallengesample/src/main/res/layout/activity_main.xml
+++ b/fyberchallengesample/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/editTextAppId"
@@ -54,7 +54,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:onClick="sendRequest"
         android:text="@string/show_offers"
         app:layout_constraintEnd_toEndOf="@+id/editTextSecurityToken"
         app:layout_constraintStart_toStartOf="@+id/editTextSecurityToken"
